# power01_mul

./: README.md  pyproject.toml
src/power01_mul/: mul.py
