[project]
name = "power01_mul"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mul = 'power01_mul.mul:mul'

[tool.pdm]
distribution = true
